--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container" id="container">
       <!-- Timeblocks go here -->
+      <!-- <div class="row">
+        <div class="col-2 time-label">09:00</div>
+        <textarea class="col-8"></textarea>
+        <button class="col-2"><i class="fas fa-save"></i></button>
+      </div> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script type="text/javascript" src="./script-oli.js"></script>
   </body>
 </html>
